# py42

./: README.md
day00/ex00/: Hello.py
day00/ex01/: format_ft_time.py
day00/ex02/ex03/: NULL_not_found.py
day00/ex03/: NULL_not_found.py
day00/ex04/: whatis.py
day00/ex05/: building.py
day00/ex06/: filterstring.py  ft_filter.py
day00/ex07/: sos.py
day00/ex08/: Loading.py
day00/ex09/: LICENSE  README.md  builder.py  cleaner.py  docs.md  pyproject.toml
day00/ex09/docs/: README.md
day00/ex09/src/: __init__.py  forty_two.py
day00/ex09/src/ft_package/: __init__.py  count_in_list.py
day00/ex09/src/ft_tqdm/: __init__.py  ft_tqdm.py  utils.py
day00/ex09/tests/: count_in_list.test.py
