[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"


[project]
dynamic = ["version"]
name = "ft_tqdm"
description = "A sample project for demonstration purposes."
authors = [
  {name = "Abdellah Bellakrim", email = "bellakrim2032@gmail.com"}
]
maintainers = [
  {name = "Abdellah Bellakrim", email = "bellakrim2032@gmail.com"}
]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 0.1 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
