[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ft_tqdm"
version = "0.0.1"
description = "A sample project for demonstration purposes."
authors = [
  {name = "Abdellah Bellakrim", email = "bellakrim2032@gmail.com"}
]
maintainers = [
  {name = "Abdellah Bellakrim", email = "bellakrim2032@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"