[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ft_package"
version = "0.0.1"
description = "A sample project for demonstration purposes."
authors = [
  {name = "Abdellah Bellakrim", email = "bellakrim2032@gmail.com"}
]
maintainers = [
  {name = "Abdellah Bellakrim", email = "bellakrim2032@gmail.com"}
]
readme = "docs/README.md"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/AbdellahBellakrim/py42/tree/main/day00/ex09"
Documentation = "https://github.com/AbdellahBellakrim/py42/tree/main/day00/ex09/docs"